# Pick

./: LICENSE  README.md
SampleCode/: User32.Lib  kernel32.Lib
SampleCode/Fibonacci/src/: main.pick
SampleCode/FizzBuzz/src/: main.pick
SampleCode/Greeting/src/: English.pick  Japanese.pick  Main.pick  Print.pick
SampleCode/HelloWorld/src/: main.pick
SampleCode/MessageBox/src/: main.pick
Src/cpp/: compiler.cpp  compiler_option.cpp  dump.cpp  exe.cpp  ir.cpp  main.cpp  syntax.cpp  token.cpp  vector_utils.cpp  x86_64.cpp
Src/include/: compiler.h  compiler_option.h  dump.h  exe.h  ir.h  module.h  result.h  syntax.h  token.h  vector_utils.h  x86_64.h
compiler/: .gitignore  CMakeLists.txt
compiler/bundler/: CMakeLists.txt  bundle.h  bundler.cpp  bundler.h  fn_compiler.cpp  fn_compiler.h  function.cpp  function.h  symbol.cpp  symbol.h
compiler/parser/: CMakeLists.txt  ast.cpp  ast.h  ast_node.cpp  ast_node.h  parser.cpp  parser.h  token.cpp  token.h
compiler/parser/ast_generate_impl/: als_def_generate.cpp  arg_def_generate.cpp  asign_generate.cpp  back_unary_generate.cpp  cls_def_generate.cpp  comp_generate.cpp  expr_generate.cpp  extern_generate.cpp  factor_generate.cpp  fn_def_generate.cpp  front_unary_generate.cpp  import_generate.cpp  primary_generate.cpp  term_generate.cpp  type_generate.cpp  var_def_generate.cpp  var_generate.cpp
compiler/pcir/: CMakeLists.txt  module_analyzer.cpp  module_analyzer.h  pcir.cpp  pcir.h  pcir_code.h  pcir_dump.cpp  pcir_dump.h  pcir_format.h  pcir_struct.cpp  pcir_struct.h  semantic_analyzer.cpp  semantic_analyzer.h
compiler/pcir/module_analyzer_impl/: binary_analyze.cpp  block_analyze.cpp  expr_analyze.cpp  fn_def_analyze.cpp  if_analyze.cpp  literal_analyze.cpp  unary_analyze.cpp  var_analyze.cpp  var_def_analyze.cpp  while_analyze.cpp
compiler/pickc/: CMakeLists.txt  compiler_option.cpp  compiler_option.h  config.h  main.cpp  module_tree.cpp  module_tree.h
compiler/src/: CMakeLists.txt  compiler_option.cpp  compiler_option.h  config.h  main.cpp  opecode.h  output_buffer.cpp  output_buffer.h  pickc.exe.manifest
compiler/src/bundler/: CMakeLists.txt  bundle.cpp  bundle.h  bundler.cpp  bundler.h  pcir_decoder.cpp  pcir_decoder.h
compiler/src/linker/: CMakeLists.txt  block.h  linker.cpp  linker.h  operator.cpp  operator.h  routine.h  routine_converter.cpp  routine_converter.h  variable.h
compiler/src/linker/windows_x64/: CMakeLists.txt  assembly.cpp  assembly.h  exe_converter.cpp  exe_converter.h  exe_format.h  lib_loader.cpp  lib_loader.h  routine_compiler.cpp  routine_compiler.h
compiler/src/parser/: CMakeLists.txt  module_tree.cpp  module_tree.h  parser.cpp  parser.h
compiler/src/parser/ast/: generator.cpp  generator.h  node.cpp  node.h
compiler/src/parser/ast/analyze/: asign.cpp  back_unary_expression.cpp  block.cpp  compare.cpp  control.cpp  expression.cpp  factor.cpp  formula.cpp  front_unary_expression.cpp  function.cpp  immediate.cpp  primary_expression.cpp  statement.cpp  term.cpp  var_decl.cpp  variable.cpp
compiler/src/parser/token/: token.cpp  token.h  tokenizer.cpp  tokenizer.h
compiler/src/pcir/: CMakeLists.txt  accessibility.h  fn_generator.cpp  fn_generator.h  fn_section.cpp  fn_section.h  generator.cpp  generator.h  module_section.cpp  module_section.h  mutability.h  operator.cpp  operator.h  symbol_section.cpp  symbol_section.h  text_section.cpp  text_section.h  type_section.cpp  type_section.h  variable.cpp  variable.h
compiler/src/utils/: CMakeLists.txt  binary_vec.cpp  binary_vec.h  dyn_cast.h  file_id.cpp  file_id.h  fstream_utils.h  instanceof.h  lazy.h  map_utils.h  set_utils.h  string_utils.cpp  string_utils.h  vector_utils.h
compiler/ssa/: CMakeLists.txt  converter.cpp  converter.h  ssa_struct.cpp  ssa_struct.h
compiler/utils/: CMakeLists.txt  binary_vec.cpp  binary_vec.h  dyn_cast.h  instanceof.h  option.h  result.cpp  result.h  string_utils.cpp  string_utils.h  vector_utils.h
compiler/windows_x64/: CMakeLists.txt  compiler.cpp  compiler.h  exe_format.h  lib_loader.cpp  lib_loader.h  linker.cpp  linker.h  routine.cpp  routine.h  routine_compiler.cpp  routine_compiler.h  type.cpp  type.h
compiler/windows_x64/operation_impl/: binary_operations.cpp  call_operation.cpp  convert_operations.cpp  epilogue_operations.cpp  jmp_operations.cpp  lea_operation.cpp  mov_operation.cpp  movx_operations.cpp  mul_div_operations.cpp  neg_operation.cpp  push_pop_operation.cpp
language specification/: bnf.txt  japanese.html
language specification/jp/: lang.html  pcir.html
pick-syntax-highlight/: CHANGELOG.md  README.md  language-configuration.json  package.json  pick-syntax-highlight-0.0.1.vsix  vsc-extension-quickstart.md
pick-syntax-highlight/syntaxes/: pick.tmLanguage.json
